# MineOS-Market-Proxy

./: .pre-commit-config.yaml  README.md  check.sh  ci.sh  pyproject.toml
.github/workflows/: ci.yml
src/market_proxy/: __init__.py  generate_pages.py  htmlgen.py  reader.py  rere.py  server.py
src/market_proxy/templates/: error_page.html.jinja
tests/: test_htmlgen.py  test_reader.py  test_result.py
